Pending changes in the mainline
===============================

General
-------

* Support of DICOM storage commitment

REST API
--------

* API version has been upgraded to 5
* added "/peers/{id}/system" route to test the connectivity with a remote peer (and eventually
  retrieve its version number)
* "/changes": Allow the "limit" argument to be greater than 100
* "/instances/{id}/preview": Now takes the windowing into account
* "/tools/log-level": Possibility to access and change the log level without restarting Orthanc
* added "/instances/{id}/frames/{frame}/rendered" and "/instances/{id}/rendered" routes
  to render frames, taking windowing and resizing into account
* "/instances": Support "Content-Encoding: gzip" to upload gzip-compressed DICOM files
* ".../modify" and "/tools/create-dicom": New option "PrivateCreator" for private tags

Plugins
-------

* New sample plugin: "ConnectivityChecks"
* New primitives to handle storage commitment SCP by plugins

Lua
---

* New events:
  - "OnDeletedPatient", "OnDeletedStudy", "OnDeletedSeries", "OnDeletedInstance":
    triggered when a resource is deleted
  - "OnUpdatedPatient", "OnUpdatedStudy", "OnUpdatedSeries", "OnUpdatedInstance":
    triggered when an attachment or a metadata is updated

Maintenance
-----------

* Support of MPEG4 transfer syntaxes in C-Store SCP
* C-FIND SCU at Instance level now sets the 0008,0052 tag to IMAGE per default (was INSTANCE).
  Therefore, the "ClearCanvas" and "Dcm4Chee" modality manufacturer have now been deprecated.
* More strict C-FIND SCP wrt. the DICOM standard: Forbid wildcard
  matching on some VRs, ignore main tags below the queried level
* Fix issue #65 (Logging improvements)
* Fix issue #103 ("queries/.../retrieve" API returns HTTP code 200 even on server errors)
* Fix issue #140 (Modifying private tags with REST API changes VR from LO to UN)
* Fix issue #154 (Matching against list of UID-s by C-MOVE)
* Fix issue #156 (Chunked Dicom-web transfer uses 100% CPU)